[gd_scene load_steps=3 format=3 uid="uid://bxrta1oppe24y"]

[ext_resource type="Script" path="res://UI/scripts/pause_scene.gd" id="1_hxplg"]
[ext_resource type="Theme" uid="uid://kdfneisskda" path="res://misc/UI_theme.tres" id="2_l0hgq"]

[node name="Pause" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_hxplg")

[node name="CenterContainer" type="CenterContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("2_l0hgq")

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
layout_mode = 2

[node name="Panel" type="Panel" parent="CenterContainer/PanelContainer"]
custom_minimum_size = Vector2(300, 250)
layout_mode = 2

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/PanelContainer/Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer/Panel/CenterContainer"]
custom_minimum_size = Vector2(250, -150)
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Game paused"
horizontal_alignment = 1

[node name="space" type="Control" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
custom_minimum_size = Vector2(0, 20)
layout_mode = 2

[node name="Resume" type="Button" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Resume Game"

[node name="restart" type="Button" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Restart level"

[node name="options" type="Button" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Options (WIP)"

[node name="menu" type="Button" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Go to main menu (WIP)"

[node name="quit" type="Button" parent="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer"]
layout_mode = 2
text = "Quit"

[connection signal="pressed" from="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer/restart" to="." method="_on_restart_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer/options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer/menu" to="." method="_on_menu_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/Panel/CenterContainer/VBoxContainer/quit" to="." method="_on_quit_pressed"]
